add gnerator script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
     "cucumber:dev": "cross-env ENV=dev cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
     "cucumber:staging": "cross-env ENV=staging cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
+    "generate-feature": "ts-node src/scripts/generateFeatureFile.ts",
     "validate-k6-report": "cat reports/performance/loadTest.json | jq",
     "build": "npx tsc",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -39,6 +40,7 @@
     "cucumber-console-formatter": "1.0.0",
     "cucumber-html-formatter": "3.1.0",
     "moment": "^2.30.1",
+    "openai": "^4.77.3",
     "pixelmatch": "5.3.0",
     "playwright": "1.48.2",
     "pngjs": "6.0.0"
@@ -56,7 +58,7 @@
     "@types/prettier": "3.0.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
-    "as-a": "2.2.7",
+    "as-a": "^2.2.7",
     "axe-html-reporter": "2.2.11",
     "axe-playwright": "2.0.3",
     "axios": "1.7.7",
