--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
     "cucumber:dev": "cross-env ENV=dev cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
     "cucumber:staging": "cross-env ENV=staging cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
-    "generate-feature": "ts-node src/scripts/generateFeatureFile.ts",
+    "generate-feature": "ts-node src/scripts/generateFeatureFile.ts && npx gherkin-lint features/*.feature",
     "validate-k6-report": "cat reports/performance/loadTest.json | jq",
     "build": "npx tsc",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
@@ -20,7 +20,8 @@
     "test:qa": "cross-env ENV=qa npx playwright test",
     "test:dev": "cross-env ENV=dev npx playwright test",
     "test:staging": "cross-env ENV=staging npx playwright test",
-    "test": "cross-env ENV=qa npx playwright test"
+    "test": "cross-env ENV=qa npx playwright test",
+    "generate:feature": "ts-node src/support/scripts/generateFeature.ts"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -39,8 +40,9 @@
     "csv-parser": "^3.0.0",
     "cucumber-console-formatter": "1.0.0",
     "cucumber-html-formatter": "3.1.0",
+    "inquirer": "^12.3.2",
     "moment": "^2.30.1",
-    "openai": "^4.77.3",
+    "openai": "^4.78.1",
     "pixelmatch": "5.3.0",
     "playwright": "1.48.2",
     "pngjs": "6.0.0"
@@ -50,6 +52,7 @@
     "@types/chai": "^5.0.1",
     "@types/csv-parse": "^1.1.12",
     "@types/fs-extra": "11.0.4",
+    "@types/inquirer": "^9.0.7",
     "@types/jsonfile": "^6.1.4",
     "@types/lodash": "4.17.12",
     "@types/node": "22.8.1",
@@ -64,7 +67,7 @@
     "axios": "1.7.7",
     "chai": "^5.1.2",
     "cross-env": "^7.0.3",
-    "dotenv": "16.4.5",
+    "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
