--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,9 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es2021"
-    ],
+    "target": "ES2021",
+    "module": "CommonJS",
+    "lib": ["DOM", "ES2021"],
     "sourceMap": true,
-    "outDir": "./build",
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
