--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "generate:feature": "ts-node src/scripts/generateFeature.ts",
     "report:generate": "npx multiple-cucumber-html-reporter --reportDir reports/html --jsonDir reports/cucumber --reportName 'Consolidated Test Report' --displayDuration true",
     "report:open": "open reports/html/index.html"
-
   },
   "engines": {
     "node": ">=20.0.0"
@@ -40,7 +39,7 @@
     "@playwright/test": "1.48.2",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "4.22.0",
-    "@types/k6": "0.54.1",
+    "@types/k6": "^0.54.1",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.0.0",
     "cucumber-console-formatter": "1.0.0",
@@ -67,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "as-a": "^2.2.7",
+    "autoprefixer": "^10.4.20",
     "axe-html-reporter": "2.2.11",
     "axe-playwright": "2.0.3",
     "axios": "1.7.7",
@@ -84,10 +84,12 @@
     "lint-staged": "15.2.10",
     "open": "10.1.0",
     "path": "^0.12.7",
+    "postcss": "^8.5.3",
     "prettier": "3.3.3",
     "read-excel-file": "5.8.6",
     "rimraf": "6.0.1",
     "standard-version": "9.5.0",
+    "tailwindcss": "^4.0.9",
     "ts-node": "^10.9.2",
     "tsc-files": "1.1.4",
     "typescript": "5.6.3"
